hphp/hack/test/typecheck/collection_mixed.php.exp
File "collection_mixed.php", line 18, characters 23-40:
Some type arguments violate their constraints (Typing[4323])
  File "hackarray.hhi", line 33, characters 27-28:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 33, characters 33-40:
  This type constraint is violated
  File "hackarray.hhi", line 33, characters 33-40:
  Expected `arraykey`
  File "collection_mixed.php", line 18, characters 30-34:
  But got `mixed`
